app/globals.css
@import "tailwindcss";

@theme {
  --color-background: #f8f8f8;
  --color-foreground: #111111;

  --color-surface: #ffffff;
  --color-surface-hover: #fafafa;
  --color-border-subtle: #f0f0f0;

  --color-accent-primary: #B30500;
  --color-accent-secondary: #000000;

  --color-status-urgent: #B30500;
  --color-status-ok: #4caf82;

  --color-text-muted: #666666;
  --color-text-dimmed: #999999;

  --font-serif: var(--font-outfit), sans-serif;
  --font-mono: var(--font-roboto-mono), monospace;
  --font-sans: var(--font-inter), sans-serif;
}

:root {
  --bg: #f8f8f8;
  --surface: #ffffff;
  --surface2: #f0f0f0;
  --border: #f0f0f0;
  --accent: #B30500;
  --accent2: #111111;
  --red: #B30500;
  --green: #4caf82;
  --text: #111111;
  --text2: #666666;
  --text3: #999999;
  --radius: 24px;
}

@layer base {
  body {
    background-color: var(--color-background);
    color: var(--color-foreground);
    font-family: var(--font-sans);
  }
}

@keyframes marquee {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-50%);
  }
}

.animate-marquee {
  animation: marquee 60s linear infinite;
}

.animate-marquee:hover {
  animation-play-state: paused;
}

